[tool.poetry]
name = "pymemdb"
version = "0.1.0"
description = ""
authors = ["sakthi <sakthiratnam050@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
poethepoet = "^0.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


